--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html ng-app="todoApp">
 <head>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/angular-loading-bar/src/loading-bar.css">
     <link rel="stylesheet" href="components/main.css">
 </head>
 <body>
@@ -18,15 +19,13 @@
 <div class="container">
     <ui-view></ui-view>
 </div>
-<footer>
-    This is page footer
-</footer>
 
 
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/angular/angular.min.js"></script>
-<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+<script src="node_modules/angular-loading-bar/src/loading-bar.js"></script>
 <script src="components/main.js"></script>
 <script src="components/main.config.js"></script>
 <script src="components/student.service.js"></script>
