First release for Management Page.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/angular-loading-bar/src/loading-bar.css">
+    <link rel="stylesheet" href="node_modules/sweetalert/lib/sweet-alert.css">
+
     <link rel="stylesheet" href="components/main.css">
 </head>
 <body>
@@ -26,9 +28,14 @@
 <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 <script src="node_modules/angular-loading-bar/src/loading-bar.js"></script>
+<script src="node_modules/sweetalert/lib/sweet-alert.min.js"></script>
+<script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
+<!-- Our javascript -->
+
 <script src="components/main.js"></script>
 <script src="components/main.config.js"></script>
 <script src="components/student.service.js"></script>
 <script src="components/list/list.controller.js"></script>
+<script src="components/form.controller.js"></script>
 </body>
 </html>
